# juliafunction

./: .gitignore  LICENSE  README.md  environment.yml  juliapkg.json  pyproject.toml
exp/basic/: functions.jl  functions.py
exp/diffopt/: matrix_relu.jl
exp/diffopt_cuda/: matrix_relu.jl
exp/diffopt_distributed/: diffopt_distributed.py  juliapkg.json  matrix_relu.jl
juliafunction/: __init__.py  juliafunction.py  utils.py
